--- a/spring03_shop/src/main/resources/application.properties
+++ b/spring03_shop/src/main/resources/application.properties
@@ -21,11 +21,10 @@ spring.jpa.properties.hibernate.show_sql=true
 #콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
 spring.jpa.properties.hibernate.format_sql=true
 
- #쿼리에 물음표로 출력되는 바인드 파라미터 출력
+#쿼리에 물음표로 출력되는 바인드 파라미터 출력
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
-
 # 파일 업로드 경로설정
-spring.servlet.multipart.location=c:\\web_ai\\download\\temp
+spring.servlet.multipart.location=D:\\web_ai\\download\\temp
 
 
