--- a/spring03_shop/src/main/resources/application.properties
+++ b/spring03_shop/src/main/resources/application.properties
@@ -25,6 +25,6 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
 # 파일 업로드 경로설정
-spring.servlet.multipart.location=D:\\web_ai\\download\\temp
+spring.servlet.multipart.location=c:\\web_ai\\download\\temp
 
 
