--- a/spring04_mybatis/src/main/resources/application.properties
+++ b/spring04_mybatis/src/main/resources/application.properties
@@ -31,7 +31,8 @@ spring.servlet.multipart.location=c:\\web_ai\\download\\temp
 #mybatis
 #mapper xml 매피용 클래스가 위치한 경로
 #mybatis.type-aliases-package=com.company.shop.board.dto, com.compamy.shop.members.dto
-mybatis.type-aliases-package=com.example.spring04_mybatis.ex01
+mybatis.type-aliases-package=com.example.spring04_mybatis.ex01, com.example.spring04_mybatis.ex02
+
 #mapper xml 파일이 위치한 경로
 #mybatis.mapper-locations=/mapper/boardMapper.xml, /mapper/membersMapper.xml
 mybatis.mapper-locations=/mapper/*.xml
